# bot-cpp

./: .gitignore  CMakeLists.txt  README.md
include/hanzo/brain/: algorithms.hpp
tests/: test_algorithms.cpp
